--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,6 @@
     "eslint": "^8.39.0",
     "eslint-plugin-react": "^7.32.2",
     "parcel-bundler": "^1.12.5",
-    "postcss": "^8.4.23",
     "postcss-preset-env": "^8.3.2",
     "prettier": "^2.8.8"
   },
